Update 'gp8dmizim-python' component image to: quay.io/rhtap-test-organization-jk/rhtap-qe:fc36751a8697e73d499354805c5423bf5d28cd22@sha256:66dc1bf30770f8323fb3470b6326e7b71a14827e0f5024c7dc0e3d5aa7bdfaf0

--- a/components/gp8dmizim-python/overlays/development/deployment-patch.yaml
+++ b/components/gp8dmizim-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gp8dmizim-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/rhtap-qe:fc36751a8697e73d499354805c5423bf5d28cd22@sha256:66dc1bf30770f8323fb3470b6326e7b71a14827e0f5024c7dc0e3d5aa7bdfaf0
+          name: container-image
